# LLM-WarRoom

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
backend/: __init__.py  case_runner.py  compare_runner.py  config.py  council.py  critique_runner.py  decide_runner.py  evaluate_runner.py  main.py  run_storage.py  smoke_anthropic_provider.py  smoke_openai_provider.py  storage.py  war_room_runner.py
backend/prompts/: __init__.py  compare.py  critique.py  evaluate.py  war_room.py
backend/providers/: __init__.py  anthropic_provider.py  base.py  model_registry.py  openai_provider.py  openrouter_provider.py  registry.py
backend/schemas/: __init__.py  case.py  provider.py  run.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: CaseWorkbench.css  CaseWorkbench.jsx  ChatInterface.css  ChatInterface.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx
